<resources>

    <string name="app_name">Project Carpool</string>
    <string name="accept">YOUR RIDE REQUEST HAS BEEN ACCEPTED! DRIVER DETAILS: </string>
    <string name="name">NAME : </string>
    <string name="ok">ok : </string>
    <string name="Next">NEXT</string>
    <string name="Reset">RESET</string>
    <string name="access_token" translatable="false">pk.eyJ1Ijoic29sYW5raSIsImEiOiJjam9hbDd6eTEwMnVoM29xdWlyNWI3NmlnIn0.rQd9sBSZXZY4EiDDMyNg2Q</string>
    <string name="user_location_permission_explanation">This app needs location permissions in order to show its functionality.</string>
    <string name="user_location_permission_not_granted">You didn\'t grant location permissions.</string>
    <string name="end_Journey">End Journey</string>

        <string name="navigation_drawer_open">Open navigation drawer</string>
        <string name="navigation_drawer_close">Close navigation drawer</string>
        <string name="nav_header_title">Android Studio</string>
        <string name="nav_header_subtitle">android.studio@android.com</string>
        <string name="nav_header_desc">Navigation header</string>
        <string name="action_settings">Settings</string>

        <string name="gallery">Gallery</string>
        <string name="Import">Import</string>
        <string name="slideshow">Slideshow</string>
        <string name="tools">Tools</string>
        <string name="title_activity_gallery">Gallery</string>
        <string name="title_activity_tools">Tools</string>
        <string name="title_activity_slideshow">Slideshow</string>
        <string name="title_activity_import">Import</string>
        <string name="driver">Driver</string>
        <string name="user">User</string>
        <string name="waiting">Waiting</string>
        <string name="Accept">Accept</string>
        <string name="Reject">Reject</string>
        <string name="Poolify">POOLIFY</string>
        <string name="starting_location">STARTING LOCATION</string>
        <string name="ending_location">ENDING LOCATION</string>

        <string name="import1">Import</string>
        <string name="home">Home</string>
        <string name="user_home">User Home</string>
        <string name="driver_home">Driver Home</string>
        <string name="logout">Logout</string>


    <string-array name="capacity">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
    </string-array>
        <string-array name="numbers">
            <item>1</item>
            <item>2</item>
            <item>3</item>
            <item>4</item>
            <item>5</item>

        </string-array>


</resources>
