<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@drawable/bg_image"

    tools:openDrawer="start">

    <include
        layout="@layout/app_bar_home"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />



    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header_home"

        app:menu="@menu/activity_home_drawer" />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.30"

        android:orientation="vertical">


        <ImageView
            android:id="@+id/imageView"

            android:layout_marginStart="100dp"
            android:layout_marginEnd="100dp"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"

            android:layout_gravity="center_horizontal"

            app:srcCompat="@drawable/final_logo" />


    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="0.15">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Poolify"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            android:typeface="serif"
            android:layout_marginBottom="40dp"
            android:layout_marginTop="100dp"
            android:textSize="45sp"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.25"
        android:orientation="horizontal">



        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/btnUser"
            android:text="@string/user"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="25dp"
            android:layout_marginBottom="50dp"
            android:layout_marginTop="500dp"
            android:layout_weight="0.25"
            android:textSize="30sp"
            android:typeface="serif"
            android:backgroundTint="@color/Yellow"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/btnDriver"
            android:text="@string/driver"
            android:layout_marginTop="500dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="40dp"
            android:layout_marginBottom="50dp"
            android:layout_weight="0.25"
            android:typeface="serif"
            android:textSize="30sp"
            android:backgroundTint="@color/Yellow"/>
    </LinearLayout>


</android.support.v4.widget.DrawerLayout>
